# diabetes-readmission-prediction

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  .vercelignore  02_feature_engineering.ipynb  AZURE_DEPLOYMENT_GUIDE.md  COMPREHENSIVE_DASHBOARD_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  Diabetes.ipynb  Dockerfile  Dockerfile.cloudrun  Dockerfile.fastapi  Dockerfile.fastapi-simple  Dockerfile.railway-simple  Dockerfile.streamlit  Dockerfile.test  EDA_Documentation.html  EDA_Documentation.md  EDA_Executive_Summary.md  GOOGLE_CLOUD_RUN_GUIDE.md  LICENSE  Makefile  POWERBI_SETUP_INSTRUCTIONS.md  PowerBI_Dashboard_Template.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_QUICK_START.md  RAILWAY_STREAMLIT_DEPLOY.md  README.md  RoadMap.txt  SCREENSHOT_PROCESS.md  SEPARATE_RAILWAY_PROJECTS.md  STREAMLIT_CLOUD_DEPLOYMENT.md  TODO.md  VERCEL_DEPLOYMENT_GUIDE.md  app.yaml  azure-deploy.sh  (+48 more)
.streamlit/: config.toml
api/: app.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
data/: DATA_SHEET.md
docs/: API_DOCUMENTATION.md  API_SCHEMA.md
models/: MODEL_CARD.md  catboost.pkl  feature_names.pkl  lightgbm.pkl  logistic_regression.pkl  training_results.pkl  xgboost.pkl  xgboost_optimized.pkl
monitoring/: metrics.py  prometheus.yml
notebooks/: .dockerignore  01_Diabetic_Readmission_Complete_Pipeline.ipynb  01_initial_eda.ipynb  API_REFERENCE.md  DEPLOYMENT_GUIDE.md  Dockerfile  PERFORMANCE_OPTIMIZATION.md  TROUBLESHOOTING_GUIDE.md  app.py  app_improved.py  build_and_run.sh  index.html  (+11 more)
(+22 files in other folders)
