[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diabetes-readmission-prediction"
version = "0.1.0"
description = "ML system to predict 30-day readmission risk for diabetic patients using MLOps best practices"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "shap>=0.42.0",
    "fairlearn>=0.8.0",
    "optuna>=3.2.0",
    "mlflow>=2.7.0",
    "pandera>=0.18.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "evidently>=0.3.0",
    "pytest>=7.4.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "ruff>=0.0.290",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "pytest-cov>=4.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = ""
